--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,14 +1,17 @@
 name: cosplay_core_app
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
   sdk: ^3.10.4
 
 dependencies:
+  ffi: ^2.1.4
   flutter:
     sdk: flutter
+  flutter_blue_classic: ^0.0.8
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
